# pico-examples

./: CMakeLists.txt  compile-rp2040.sh  compile-rp2350.sh  fetch-sdk.sh  set-sdk.sh
doc/: 2pico_w-2pico2_w-remotes.txt  FreeRTOS-Kernel-files.txt  Semaphore.odt  build-steps-notes.txt  hello_freertos2.txt  make_output_rp2040.txt  mqtt-client-startup-fails.txt  mqtt-client-startup.txt  pico2_w-no-rtc.txt  rp2350-freeRTOS.txt
freertos/: CMakeLists.txt
freertos/Semaphore/: CMakeLists.txt
freertos/hello_freertos_readcrc16/: CMakeLists.txt  readcrc16.c  readcrc16.h  utils.c
freertos/hello_freertos_readcrc16/support_files/: adding.txt  miss-code.txt
freertos/test-read-crc16/: CMakeLists.txt  pshell.h  test-read-crc16.c
pico_w/wifi/freertos/: FreeRTOSConfig_examples_common.h
pico_w/wifi/freertos/iperf/: CMakeLists.txt  picow_freertos_iperf.c  picow_freertos_iperf.c.testing
uf2-rp2040-iperf/: picow_freertos_iperf_server_mqtt.uf2  picow_freertos_iperf_server_sys.uf2
uf2-rp2350-iperf/: picow_freertos_iperf_server_mqtt.uf2  picow_freertos_iperf_server_sys.uf2
